# mini-agent

./: ARCHITECTURE_QA.md  DEMO_SCRIPT_ZH.md  PROMPT_AND_LOG.md  README.md  README_ZH.md  USAGE_ZH.md  pyproject.toml
mini_agent/: __init__.py  __main__.py  cli.py  config.py  context_manager.py  llm_client.py  parser.py  runtime.py  session.py  tool_registry.py  utils.py
mini_agent/tools/: __init__.py  calculator.py  search.py  todo.py  weather.py
prompts/: system_prompt.md
tests/: __init__.py  conftest.py  test_calculator.py  test_context_manager.py  test_parser.py  test_runtime_e2e.py  test_search.py  test_session.py  test_todo.py  test_weather.py
